[package]
name = "fibonacci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name= "appraoch1_1"
path= "src/appraoch1_1.rs"

#[[bin]]
#name= "appraoch1_2"
#path= "src/appraoch1_2.rs"

[dependencies]
halo2_proofs= "0.1.0"
