[package]
name = "fibonacci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name= "appraoch1_1"
path= "src/appraoch1_1.rs"

[[bin]]
name= "appraoch1_2"
path= "src/appraoch1_2.rs"

[[bin]]
name= "appraoch2"
path= "src/appraoch2.rs"

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[dependencies]
halo2_proofs= "0.1.0"
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
